test/trivial/shannon/readWriteBool.good
true
false
readWriteBool.chpl:9: error: halt reached - ***Error: Not of bool type***
